[gd_scene load_steps=2 format=3 uid="uid://hk43lvnisgkh"]

[ext_resource type="Script" uid="uid://df4vexoesqnkh" path="res://scenes/menus_battle/menus_info/menu_info.gd" id="1_dnfbo"]

[node name="MenuInfo" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnfbo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonClose" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "Maximum HP"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "99999"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
text = "Maximum MP"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2
text = "9999"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
text = "Physical Attack"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer"]
layout_mode = 2
text = "Physical Defense"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5/PanelContainer"]
layout_mode = 2
text = "Magical Attack"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6/PanelContainer"]
layout_mode = 2
text = "Magical Defense"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7/PanelContainer"]
layout_mode = 2
text = "Speed"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer8/PanelContainer"]
layout_mode = 2
text = "Aim"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer8/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer9" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer9/PanelContainer"]
layout_mode = 2
text = "Evasion"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer9/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer10" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer10/PanelContainer"]
layout_mode = 2
text = "Critical Chance"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer10/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="HBoxContainer11" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer11"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer11/PanelContainer"]
layout_mode = 2
text = "Restorative Power"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer11"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer11/PanelContainer2"]
layout_mode = 2
text = "999"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_right = 23.5
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="LabelName" type="Label" parent="MarginContainer3/PanelContainer/MarginContainer"]
layout_mode = 2
text = "Name"

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer4"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer4/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer4/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "HP"

[node name="LabelHPCurrent" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "99999"

[node name="Label2" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="LabelHPMax" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "99999"

[node name="ProgressBarHP" type="ProgressBar" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "HP"

[node name="LabelMPCurrent" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="Label2" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="LabelMPMax" type="Label" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="ProgressBarMP" type="ProgressBar" parent="MarginContainer4/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
show_percentage = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
